[tool.poetry]
name = "painting-app"
version = "0.1.0"
description = "Online painting app"
authors = ["Dmitry Semenko <me@dsemenko.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
